--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <main class="main">
     <div class="container">
-      <h1 class="found">38 вакансий &laquo;<span class="found__item">Junior Frontend</span>&raquo;</h1>
+      <h1 class="found"></h1>
       <div class="option">
         <div class="option__field option__field_order">
           <button class="option__btn option__btn_order">По дате</button>
@@ -186,7 +186,7 @@
         </div>
         <div class="wrapper__result result">
           <ul class="result__list">
-           <li class="result__item">
+           <!-- <li class="result__item">
              <article class="vacancy">
                <h2 class="vacancy__title">
                  <a class="vacancy__open-modal" href="#" data-vacancy="3515">Junior Frontend разработчик</a>
@@ -275,7 +275,7 @@
              </article>
            </li>
 
-           <li class="result__item">
+           <li class="result__item"> -->
              <article class="vacancy">
                <h2 class="vacancy__title"><a href="#">Junior Frontend разработчик</a></h2>
                <p class="vacancy__compensation">120&nbsp;000 – 150&nbsp;000 руб.</p>
