--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <main class="main">
     <div class="container">
-      <h1 class="found"></h1>
+      <h1 class="found">Последние вакансии</h1>
       <div class="option">
         <div class="option__field option__field_order">
           <button class="option__btn option__btn_order">По дате</button>
@@ -303,7 +303,7 @@
   </main>
 
   <div class="overlay overlay_vacancy">
-   <div class="modal">
+   <!--<div class="modal">
       <button class="modal__close">✕</button>
       <h2 class="modal__title">Junior+/Middle Front-end разработчик</h2>
       <p class="modal__compensation">от 100 000 руб.</p>
@@ -322,7 +322,7 @@
       </div>
 
       <button class="modal__response">Отправить резюме</button>
-    </div>
+    </div>-->
   </div>
 
   <div class="city">
