--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         </div>
 
         <div class="option__field option__field_period">
-          <button class="option__btn option__btn_period">За всё время</button>
+          <button class="option__btn option__btn_period">Фильтр по дате</button>
           <input type="hidden" id="search_period" name="search_period" value="365">
           <ul class="option__list option__list_period">
-            <li class="option__item option__item_active" data-date="365">За всё время</li>
+            <li class="option__item" data-date="365">За всё время</li>
             <li class="option__item" tabindex="1" data-date="30">За месяц</li>
-            <li class="option__item" tabindex="1" data-date="7">За неделю</li>
+            <li class="option__item option__item_active" tabindex="1" data-date="7">За неделю</li>
             <li class="option__item" tabindex="1" data-date="3">За три дня</li>
             <li class="option__item" tabindex="1" data-date="1">За сутки</li>
           </ul>
